--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault-btsync (0.5.1) stable; urgency=low
+
+  * Added QR generator
+
+ -- OpenMediaVault Plugin Developers <plugins@omv-extras.org>  Wed, 11 Dec 2013 03:26:16 +0200
+
 openmediavault-btsync (0.5) stable; urgency=low
 
   * Initial release
