--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault-btsync (0.5.4) stable; urgency=low
+
+  * Added ability to sync existing remote shared folders
+
+ -- OpenMediaVault Plugin Developers <plugins@omv-extras.org>  Wed, 11 Dec 2013 15:33:19 +0100
+
 openmediavault-btsync (0.5.3) stable; urgency=low
 
   * Fix service running as root instead of as btsync
