--- a/usr/share/openmediavault/locale/pl_PL/openmediavault-btsync.po
+++ b/usr/share/openmediavault/locale/pl_PL/openmediavault-btsync.po
@@ -1,21 +1,21 @@
 # SOME DESCRIPTIVE TITLE.
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
-#
-#, fuzzy
+# 
+# Translators:
 msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault-btsync\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-12-22 11:43-0600\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"PO-Revision-Date: 2013-12-20 12:48+0000\n"
+"Last-Translator: ryecoaaron <aaron27@ryecoinc.com>\n"
+"Language-Team: Polish (Poland) (http://www.transifex.com/projects/p/openmediavault-btsync/language/pl_PL/)\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=CHARSET\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Language: pl_PL\n"
+"Plural-Forms: nplurals=3; plural=(n==1 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
 
 msgid "0 - no limit"
 msgstr ""
@@ -44,7 +44,9 @@ msgstr ""
 msgid "Existing secret"
 msgstr ""
 
-msgid "Fill in a existing secret in this field if you want to sync an existing shared folder with this server."
+msgid ""
+"Fill in a existing secret in this field if you want to sync an existing "
+"shared folder with this server."
 msgstr ""
 
 msgid "Full access"
@@ -83,7 +85,8 @@ msgstr ""
 msgid "Show secret/QR code"
 msgstr ""
 
-msgid "The location needs to have read/write permissions for the user/group btsync"
+msgid ""
+"The location needs to have read/write permissions for the user/group btsync"
 msgstr ""
 
 msgid "UUID"
