--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault-btsync (0.5.5) stable; urgency=low
+
+  * Add locales
+
+ -- OpenMediaVault Plugin Developers <plugins@omv-extras.org>  Sun, 22 Dec 2013 11:44:19 -0500
+
 openmediavault-btsync (0.5.4) stable; urgency=low
 
   * Added ability to sync existing remote shared folders
