--- a/usr/share/openmediavault/locale/ru_RU/openmediavault-btsync.po
+++ b/usr/share/openmediavault/locale/ru_RU/openmediavault-btsync.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: openmediavault-btsync\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-12-22 11:43-0600\n"
-"PO-Revision-Date: 2013-12-12 17:34+0000\n"
+"PO-Revision-Date: 2013-12-23 12:58+0000\n"
 "Last-Translator: артур Мудрых <arturmon82@gmail.com>\n"
 "Language-Team: Russian (http://www.transifex.com/projects/p/openmediavault-btsync/language/ru/)\n"
 "MIME-Version: 1.0\n"
@@ -48,7 +48,7 @@ msgstr "Существующее \"секретное\" слово"
 msgid ""
 "Fill in a existing secret in this field if you want to sync an existing "
 "shared folder with this server."
-msgstr "Заполните существующим \"секретным\" словом эту область, если вы хотите синхронизировать существующую общую папку с этим сервером."
+msgstr "Заполните существующим \"секретным\" словом это поле, если вы хотите синхронизировать существующую общую папку с этим сервером."
 
 msgid "Full access"
 msgstr "Полный доступ"
@@ -81,20 +81,20 @@ msgid "Shared folder"
 msgstr "Общая папка"
 
 msgid "Shared folders"
-msgstr "Общая папки"
+msgstr "Общие папки"
 
 msgid "Show secret/QR code"
 msgstr "Показать \"Секретное\" слово / QR-код"
 
 msgid ""
 "The location needs to have read/write permissions for the user/group btsync"
-msgstr "Это расположение должно иметь права на чтение / запись для пользователя / группы btsync"
+msgstr "Эта общая папка должна иметь права на чтение/запись пользователю/группе btsync"
 
 msgid "UUID"
 msgstr "UUID"
 
 msgid "Upload limit"
-msgstr "Ограничение публикации"
+msgstr "Ограничение раздачи"
 
 msgid "Use DHT"
 msgstr "Использовать DHT"
